fix: tab trigger misaligned

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ html {
 .tab-triggers {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr;
   width: 100%;
   max-width: min(500px, 90vw);
   margin: auto;
